UPDATE rev 4 install guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,10 +2,10 @@ site_name: LexSys Docs
 
 pages:
 - Inicio: index.md
-- Escritorio: desk.md
-- Portal: portal.md
-- Editor: editor.md
-- Instalación: instalacion.md
+- Manual de Escritorio de Trabajo: desk.md
+- Manual de Portal de Servicios: portal.md
+- Manual de Editor de Contenidos: editor.md
+- Manual de Instalación: instalacion.md
 - Preguntas Frecuentes: faq.md
 
 theme: readthedocs
